@@ -1,4 +1,5 @@
 Sigil 0.6.0 TBA
+    - Implement issue 761: Shortcut key to close last open tag (Code View)
     - Implement issue 1507: Metadata dialogs should allow double click to select.
     - Implement issue 1443: Find&Replace should save state on restart,
       UI should enable/disable more items based on view
